src/test/resources/query/error/implementsNodeWithoutTable/schema.graphqls
type Film implements Node {
    id: ID!
}

type Query {
    node(id: ID!): Node
    film: Film
}